# codex-mode

./: .gitignore  .gitmodules  README.md  install.sh  pyproject.toml
src/codex_mode/: __init__.py  cli.py
tests/: test_codex_mode.py
