[project]
name = "codex-mode"
version = "0.1.0"
description = "Switch Codex between ChatGPT mode and local Responses proxy profiles"
requires-python = ">=3.11"
dependencies = [
  "tomlkit>=0.13.0",
]

[project.scripts]
codex-mode = "codex_mode.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_mode"]
